--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <td><sup>71</sup> Lu</td>
       </tr>
       <tr>
-        <th colspan="3"></th>
+        <td colspan="3"></td>
         <td><sup>90</sup> Th</td>
         <td><sup>91</sup> Pa</td>
         <td><sup>92</sup> U</td>
