--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <br />
     <table border="1px" style="empty-cells: hide">
       <tr>
-        <th colspan="3"></th>
+        <td colspan="3"></td>
         <td><sup>58</sup> Ce</td>
         <td><sup>59</sup> Pr</td>
         <td><sup>60</sup> Nd</td>
